** Fix the named node comparison and the literal comparison
The terms should be compared by their N3 encoding. Previously, '<0>'
would compare before '<%3E>', even if ASCII '0' is after ASII '%',
because only the unescaped form was compared. Similarly, the double
quote as a literal ('"\""') would compare before '"A"', even if ASCII
'\' is after ASCII 'A'.

* Noteworthy changes in release 0.5.2 (2023-03-02) [alpha]
** R binding with Rcpp
It is now possible to use the adftool API within R, thanks to the new
Rcpp binding.

* Noteworthy changes in release 0.5.1 (2023-02-21) [alpha]
** Fix windows compilation
A couple of bugs have been fixed for windows, now the whole test suite
should pass.

* Noteworthy changes in release 0.5.0 (2023-02-17) [alpha]
** Add new API endpoints to lookup typed literal objects

** Bug fix: non-integer xsd:double or xsd:decimal literals can only be converted to integers if they are whole numbers
** Breaking bug fix: "hello"^^<type> should come BEFORE "world"@en
You need to regenerate your files, because the indices built with
adftool 0.4.3 will be broken by this new version.

* Noteworthy changes in release 0.4.3 (2023-01-21) [alpha]
** Add a missing import to src/js/adftool_file.mjs
It is now possible to set the raw EEG data from JavaScript.

* Noteworthy changes in release 0.4.2 (2023-01-16) [alpha]
** Fully specify the storage type for HDF5
The HDF5 types for 32-bit integers are now specified as big
endian. This applies for B+ trees and nextID attributes. The files
must be recreated, but the uint32_t arguments of the C API are still
meant as native endianness, so your code won’t change.

* Noteworthy changes in release 0.4.1 (2023-01-13) [alpha]
** Package fixes
The continuous integration is now able to build a debian package,
without a "-dirty" suffix to the version number.
** Emscripten build fix
The file open function now respects the initialization bytes.

* Noteworthy changes in release 0.4.0 (2023-01-12) [alpha]